<resources>
    <string name="app_name">IbadatSDK</string>
    <string name="ayat">আয়াত সংখ্যা</string>
    <string name="ti">টি</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pageTransition">simple_fragment_transition</string>
    <string name="nowplaying">এখন চলছে</string>
    <string name="total_count">মোট ৯৯</string>
    <string name="total_ayat">মোট আয়াত</string>
    <string name="count">০</string>
    <string name="count_bar">বার</string>
    <string name="share_btn_text">শেয়ার</string>
    <string name="fav_button_text">ফেভারিট</string>
    <string name="hadith_source">হাদিস উৎস : </string>
    <string name="sat">শনি</string>
    <string name="sun">রবি</string>
    <string name="mon">সোম</string>
    <string name="tue">মঙ্গল</string>
    <string name="wed">বুধ</string>
    <string name="thu">বৃহ:</string>
    <string name="fri">শুক্র</string>
    <string name="muslim_holiday">ইসলামিক ছুটিরদিন</string>
    <string name="islamicCalendarTxt">"*স্থান ভেদে চাঁদ দেখার উপর নির্ভর করে আরবি মাসের তারিখ পরিবর্তন হতে পারে "</string>
    <string name="text_zero">০০</string>
    <string name="text_thirty_three">৩৩ বার</string>
    <string name="text_thirty_four">৩৪ বার</string>
    <string name="text_ninety_nine">৯৯ বার</string>
    <string name="count_complete">আপনার গণনা সম্পন্ন হয়ছেে</string>
    <string name="txt_bangla_dua_one">সুবহানআল্লাহ</string>
    <string name="txt_bangla_dua_two">আলহামদুলিল্লাহ্</string>
    <string name="txt_bangla_dua_three">বিসমিল্লাহ্</string>
    <string name="txt_bangla_dua_four">আল্লাহু আকবার</string>
    <string name="txt_bangla_dua_five">আস্তাগফিরুল্লাহ</string>
    <string name="txt_bangla_dua_six">আল্লাহ্</string>
    <string name="txt_bangla_dua_seven">লা ইলাহা ইল্লালা</string>
    <string name="txt_bangla_dua_eight">লা হাওলা ওয়ালা কুওয়াতা ইল্লা বিল্লাহ</string>
    <string name="txt_arabic_dua_one">سُبْحَانَ ٱللَّٰهِ</string>
    <string name="txt_arabic_dua_two">ٱلْحَمْدُ لِلَّٰه</string>
    <string name="txt_arabic_dua_three">بسم الله</string>
    <string name="txt_arabic_dua_four">الله أكبر</string>
    <string name="txt_arabic_dua_five">أستغفر الله</string>
    <string name="txt_arabic_dua_six">الله</string>
    <string name="txt_arabic_dua_seven">لا إله إلا الله</string>
    <string name="txt_arabic_dua_eight">لا حول ولا قوة إلا بالله</string>
    <string name="txt_times">বার</string>
    <string name="txt_total_count">আপনার মোট গণনা</string>
    <string name="txt_your_count">আপনার গণনা সমূহ</string>
    <string name="txt_round">রাউন্ড</string>
    <string name="txt_reset_count">গণনা রিসেট</string>
    <string name="reset_des">রিসেট সম্পন্ন হলে, মোট/বর্তমান গণনা রিকভার করা সম্ভব না</string>
    <string name="current_count">বর্তমান গণনা</string>
    <string name="default_item">সুবহানআল্লাহ</string>
    <string name="pleaseWaitText">অনুগ্রহপূর্বক অপেক্ষা করুন</string>
    <string name="txt_bangla_sahri_message">সাহরীর শেষ সময়</string>
    <string name="txt_bangla_iftar_message">ইফতারের সময়</string>
    <string name="title_activity_dua">DuaActivity</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="current_date">27,April 2022</string>
    <string name="rojar_niot_title">রোজার নিয়ত</string>
    <string name="rojar_niot">নাওয়াইতু আন আছুমা গাদাম মিন শাহরি রামাদ্বনাল মুবারাকি ফারদ্বাল্লাকা ইয়া আল্লাহ ফাতাক্বাববাল মিন্নী ইন্নাকা আনতাস সামীয়ু\'ল আ\'লীম।</string>
    <string name="ifter_niot_title">ইফতারের দোয়া</string>
    <string name="ifter_niot">আল্লাহুম্মা সুমতু লাকা, ওয়া তাওআক্কালতু আ\'লা রিঝক্বিকা, ওয়া আফতারতু বিরাহমাতিকা ইয়া আরহামার রহিমীন।</string>
    <string name="note">* রমজান শুরু ও শেষের তারিখ চাঁদ দেখার ওপর নির্ভরশীল।</string>
    <string name="seheri_last_time">সেহরীর শেষ সময়</string>
    <string name="ifter_last_time">ইফতারের সময়</string>
    <string name="duasommoho">দোয়া সমূহ</string>
    <string name="rojar_niot_arbi">نويت ان اصوم غدا من شهر رمضان المبارك فرضا لك ياالله فتقبل منى انك انت السميع العليم.</string>
    <string name="ifter_niot_arbi">اللهم لك صمت و على رزقك افطرت.</string>
    <string name="roja_rule">
         ১:   সফর অবস্থায় খুব কষ্ট হলে।
       \n\n২:  অসুস্হ অবস্থায় ঔষুধ সেবন না করলে প্রাণ নাশের আশংকা হলে।
         \n\n৩: দুগ্ধ দায়িনী স্ত্রীলোকের নিজের বা দুগ্ধ শিশুর জীবনের ব্যাপারে আশংকা হলে।
         \n\n৪: বৃদ্ধাবস্থায় রোযা রাখার কারনে মারাত্মক দুর্বল হয়ে জীবনের ব্যাপারে আশংকা হলে।
         \n\n৫: আল্লাহর রাস্তায় জিহাদের জন্য।
         \n\n৬: বেহুঁশ বা পাগল হয়ে গেলে।
         \n\n৭: রোগ বেড়ে যাওয়ার বা নতুন কোন রোগ সৃষ্টি হওয়ার আশংকা হলে । ( তবে তা দ্বীনদার, পরযেগার, অভিজ্ঞ চিকিৎসকের পরামর্শ অনুযায়ী হতে হবে )
         \n\n৮: গর্ভ অবস্থায় নিজের বা সন্তানের প্রাণ নাশের আশংকা হলে।
        \n \n৯: এমন পিপাসা বা ক্ষুধা যাতে প্রাণের আশংকা হয়।
         \n\n ( কেহ যদি অন্যকে দিয়ে কাজ করাতে পারে, বা জীবিকা অর্জনের জন্য অন্য কোন কাজি করার সুযোগ থাকা সত্ত্বেও টাকার লোভে এমন কাজ করল, যার কারনে ক্ষধা বা পিপাসায় আক্রান্ত হল, তাহলে তাঁর রোজা ছাড়ার অনুমতি নাই )
</string>
    <string name="roja_rule_title">রোজার নিয়মকানুন</string>
    <string name="roja_rule_title1">যে সমস্ত কারণে রোযা শুরু করার পর ভেঙ্গে ফেলার অনুমতি রয়েছে, তবে পরে ক্বাযা আদায় করতে হয়</string>
    <string name="roja_rule_title2">যে ৫ দিন রোযা রাখা হারাম</string>
    <string name="roja_rule2">
        ১: ঈদুল ফিতরের দিন
         \n\n২: ঈদুল আযহার দিন
         \n\n৩: ১১, ১২ ও ১৩ই জিলহজ্ব অর্থাৎ ঈদুল আযহার পরের তিন দিন, এই মোট ৫ দিন রোযা রাখা হারাম।</string>
    <string name="roja_rule_title3">রোযা ভঙ্গের কারণ</string>
    <string name="roja_rule3">
        যে সব কারনে রোযা ভেঙ্গে যায় এবং একটি রোযার পরিবর্তে একটি রোযা কাজা করা ওয়াজিব হয়ঃ\n
        \n ১: কানে বা নাকে ঔষুধ দিলে।\n
         \n২: ইচ্ছাকৃতভাবে মুখভরে বমি করলে বা অল্প বমি আসার পর তা গিলে ফেললে।\n
         \n৩: কুলি করার সময় অনিচ্ছা বশত কন্ঠনালীতে পানি চলে গেলে।\n
         \n৪: স্ত্রী বা কোন নারীকে শুধু স্পর্শ প্রভৃতি করার কারনেই বীর্যপাত হয়ে গেলে।\n
         \n৫: এমন কোন জিনিস খেলে যা খাদ্য নয় যেমন : কাঠ, লোহা, মাটি, কয়লা ইত্যাদি।\n
         \n৬: বিড়ি সিগারেট বা হুক্কা সেবন করলে।\n
         \n৭: আগরবাতি প্রভৃতির ধোয়া ইচ্ছাকৃত ভাবে নাকে বা কন্ঠনালীতে পৌছালে।\n
         \n৮: ভুলে পানাহার করার পর রোযা ভেঙ্গে গেছে মনে করে কোন কিছু পানাহার করলে।\n
         \n৯: রাত আছে মনে করে সুবহে সাদিকের পরে কিছু খেলে।\n
         \n১০: ইফতারীর সময়ের পূর্বে সময় হয়ে গেছে মনে করে ইফতারী করলে বা কিছু খেলে।\n
         \n১১: দুপুরের পরে রোযার নিয়ত করলে।\n
         \n১২: দাঁত দিয়ে রক্ত বের হলে তা থুথুর চেয়ে পরিমানে যদি বেশি হয় এবং কন্ঠনালীতে চলে যায়।\n
         \n১৩: কেহ জোর পূর্বক রোযাদারের মুখে কিছু দিলে এবং তা কন্ঠনালীতে চলে গেলে।\n
         \n১৪: দাঁত কোন খাদ্য টুকরো আটকে ছিল, তা সুবহে সাদেকের পর জিহ্বা অথবা আঙ্গুলি দ্বারা বের করে গিলে ফেললে। ( তবে যদি ছুলা বুটের চেয়ে ছোট হয় এবং মুখের ভিতর হতে বের না করে তাহলে রোযা মাকরুহ হবে ভাঙ্গবে না )\n
         \n১৫: হস্তমৈথুন করে বীর্যপাত ঘটালে। \n
         \n১৬: পেশাব বা পায়খানার রাস্তায় ঔষুধ, পানি, তৈল বা ভিজা আঙ্গুল প্রবেশ করালে। অথবা শুকনো আঙ্গুল পুরোটা প্রবেশ করিয়ে পুরোটা বা টিছুটা বের করে আবার প্রবেশ করালে। \n
         \n১৭: মুখে পান রেখে ঘুমিয়ে গেলে এবং এ অবস্থায় সু্বহে সাদিক হয়ে গেলে। \n
         \n১৮: নস্যি গ্রহন করলে বা কানে তেল ঢাললে। \n
         \n১৯: রোযার নিয়ত ব্যতীত রোযা রাখলে। \n
         \n২০: স্ত্রীর বেহুশ, অচেতন বা ঘুমন্ত অবস্থায় তাঁর সাথে সহবাস করলে স্ত্রীর উপর শুধু কাযা ওয়াজিব হবে। \n
         \n২১: নফল রোযা রেখে ভেঙ্গে ফেললে।\n
         \n২২: এক দেশে রোযা শুরু করে অন্যদেশে চলে গেলে সেখানে যদি নিজের দেশের তুলনায় আগে ঈদ হয়ে তাহলে নিজের দেশের হিসাবে যে কয়টা রোযা কম হবে তা কাযা করতে হবে। আর যদি বেড়ে যায় তাহলে সে বেড়ে যাওয়া রোযা রাখতে হবে।</string>
    <string name="non_romadan_title">ইফতার সেহরীর সময়সূচী</string>
    <string name="ifter_last_time_title">ইফতারের \nসময়</string>
    <string name="rojar_niot_meaning">অনুবাদঃ হে আল্লাহ আপনার সন্তুষ্টির জন্য আগামীকাল রমজানের ফরজ রোজা রাখার নিয়ত করছি। আমার তরফ থেকে আপনি তা কবুল করুন। নিশ্চয়ই আপনি সর্বশ্রোতা, সর্বজ্ঞাত।</string>
    <string name="ifter_niot_meaning">অনুবাদঃ  হে আল্লাহ তায়ালা আমি আপনার নির্দেশিত মাহে রমাজানের ফরয রোজা শেষে আপনারই নির্দেশিত আইন মেনেই রোজার পরিসমাপ্তি করছি ও রহমতের আশা নিয়ে ইফতার আরম্ভ করিতেছি। তারপর \"বিসমিল্লাহি ওয়া\'আলা বারাকাতিল্লাহ\" বলে ইফতার করা</string>
    <string name="todayifer_time_roja">আজকের ইফতারের সময়</string>
    <string name="today_sehery_time_roja">আজকের সেহরীর শেষ সময়</string>
    <string name="name_meaning">অর্থ:</string>
    <string name="ramadan">রমজান</string>
    <string name="date">তারিখ</string>
    <string name="sehri_last_time">সেহরীর শেষ সময়</string>
    <string name="txt_am">am</string>
    <string name="txt_pm">pm</string>
    <string name="day">দিন</string>
    <string name="minute">Minute</string>
    <string name="today_ifter_last_time">Today\'s ifter time</string>
    <string name="ifter_time">ইফতার</string>
    <string name="sehri_alert">Sehri Alert</string>
    <string name="ifter_alert">Ifter Alert</string>
    <string name="notification_sound">Notification Sound</string>
    <string name="notification_vibration">Notification Vibration</string>
    <string name="sehri_time_up">Sehri time is up</string>
    <string name="time_for_iftari">It is time for iftari</string>
    <string name="fajr">Fazr</string>
    <string name="txt_title_compass">সঠিক দিক নির্দেশনার জন্য ফোনটি ক্যালিব্রেট (Calibrate) করুন এবং লোকেশন সার্ভিস অন করুন</string>
    <string name="km_text">" কিলোমিটার"</string>
    <string name="makkah_distance">"মক্কা থেকে দূরত্ব "</string>
    <string name="degree_txt">  ভৌগলিক উত্তর থেকে</string>
    <string name="turn_on_txt">সঠিক দিক নির্দেশনা পেতে আপনার লোকেশন অন করুন</string>
    <string name="ibadat_quran">Quran</string>
    <string name="previous_content">পূর্ববর্তী</string>
    <string name="next_content">পরবর্তী</string>
    <string name="txt_jakat_calculator">যাকাত ক্যালকুলেটর</string>
    <string name="txt_save_calculation">হিসাব সংরক্ষণ</string>
    <string name="txt_new_calculation">নতুন হিসাব</string>
    <string name="txt_jakat_description">ইসলামে ৭.৫ ভরি স্বর্ণ কিংবা ৫২.৫ ভরি রুপা অথবা সমপরিমাণ অর্থ এক বছর যাবত গচ্ছিত থাকলে তার বাজার মুল্য অনুযায়ী মোট অর্থের শতকরা ২.৫% যাকাত দেওয়ার বিধান রয়েছে</string>
    <string name="txt_total_asset">মোট সম্পদ</string>
    <string name="txt_jakat_baki">যাকাত বাকী</string>
    <string name="txt_title_total_asset">চন্দ্র বছরে আপনার দখলে থাকা সমস্ত সম্পদের পরিমান প্রবেশ করুন:</string>
    <string name="title_nogod_taka">নগদ টাকা</string>
    <string name="title_bank_nogod_taka">ব্যাংক অ্যাকাউন্টে নগদ টাকা</string>
    <string name="title_ornament_header">সোনা রূপার পরিমান</string>
    <string name="text_gold_amount">সোনার মান (টাকায়)</string>
    <string name="text_silver_amount">রূপার মান (টাকায়)</string>
    <string name="title_investment">বিনিয়োগ</string>
    <string name="text_share_market">শেয়ার বাজার</string>
    <string name="text_other_investment">অন্যান্য বিনিয়োগ</string>
    <string name="title_asset">সম্পত্তি</string>
    <string name="OneKmDistance">১ কি.মি</string>
    <string name="TwoKmDistance">৫ কি.মি</string>
    <string name="ThreeKmDistance">১০ কি.মি</string>
    <string name="downloadDialog">নিশ্চিত করতে ডাউনলোড বাটন ক্লিক করুন­</string>
    <string name="countryName">লোডিং</string>
    <string name="next_namaz_time">পরবর্তী আজান\t দুপুর ০১:০৭ মিনিট</string>
    <string name="asor_ar_okto">আসরের</string>
    <string name="time">১.১৫.৩০</string>
    <string name="baki_ase">বাকি আছে</string>
    <string name="today_date">মঙ্গলবার, ২০ ফেব্রুয়ারী ১৮</string>
    <string name="sunrise">Sunrise</string>
    <string name="surjo_doi_time">আজ সূর্যোদয় সকাল ৫:২৩ মিনিট</string>
    <string name="fojor_okto">ফজরের</string>
    <string name="vor">ভোর</string>
    <string name="fojor_okto_time">৫:০৭</string>
    <string name="download">ডাউনলোড</string>
    <string name="cancel">বাতিল</string>
</resources>