<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tabs"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <com.ibadat.sdk.views.MyCustomTextView
        android:id="@+id/ctv_date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.3"
        android:gravity="center"
        android:text="@string/date"
        android:textSize="14sp" />

    <com.ibadat.sdk.views.MyCustomTextView
        android:id="@+id/ctv_sahri_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/sehri_last_time"
        android:textSize="14sp" />

    <com.ibadat.sdk.views.MyCustomTextView
        android:id="@+id/ctv_iftar_time"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:gravity="center"
        android:text="@string/ifter_time"
        android:textSize="14sp" />
</LinearLayout>