<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cv_azan_time"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_weight="1"
    android:background="@color/white"
    android:innerRadius="0dp"
    android:orientation="vertical"
    app:cardElevation="3dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:id="@+id/ll_azan"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingTop="5dp"
        android:paddingBottom="5dp">

        <com.ibadat.sdk.views.MyCustomTextView
            android:id="@+id/ctv_azan_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/fojor_okto"
            android:textColor="@color/black"
            android:textSize="@dimen/namaz_somoisuchi_textsize" />

        <ImageView
            android:id="@+id/iv_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            app:tint="@color/gray" />

        <com.ibadat.sdk.views.MyCustomTextView
            android:id="@+id/ctv_day_type_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/vor"
            android:textColor="@color/black"
            android:textSize="@dimen/namaz_somoisuchi_textsize" />

        <com.ibadat.sdk.views.MyCustomTextView
            android:id="@+id/ctv_azan_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:tag="@string/fajr"
            android:text="@string/fojor_okto_time"
            android:textColor="@color/black"
            android:textSize="@dimen/namaz_somoisuchi_textsize" />

        <com.ibadat.sdk.views.MyCustomTextView
            android:id="@+id/ctv_meridiem_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/namaz_somoisuchi_textsize" />
    </LinearLayout>
</androidx.cardview.widget.CardView>
