<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="#34000000"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:padding="@dimen/_12sdp"
        android:layout_marginTop="0dp"
        android:background="@drawable/round_corner_radious"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="5dp">

        <com.ibadat.sdk.views.MyCustomTextView
            android:id="@+id/txt_file_path"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:padding="20dp"
            android:text="@string/downloadDialog"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:weightSum="2"
            android:orientation="horizontal"
            android:paddingBottom="15dp">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corner_gray"
                android:textColor="@color/white"
                android:text="@string/cancel"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:layout_marginLeft="5dp"
                />

            <Button
                android:id="@+id/btn_Confirmation"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:adjustViewBounds="true"
                android:scaleType="fitXY"
                android:textColor="@color/white"
                android:text="@string/download"
                android:background="@drawable/rounded_corner_blue" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>