<?xml version="1.0" encoding="utf-8"?><!--<layout>-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.MosquelocatorTabFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_distance_range"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:elevation="12dp"
            android:innerRadius="0dp"
            android:padding="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="4dp"
            app:cardUseCompatPadding="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:background="#edcece"
                android:orientation="horizontal">

                <com.ibadat.sdk.views.MyCustomTextView
                    android:id="@+id/ctv_one_km"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:background="@color/back_loc"
                    android:gravity="center"
                    android:text="@string/OneKmDistance"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@color/apps_color" />

                <com.ibadat.sdk.views.MyCustomTextView
                    android:id="@+id/ctv_two_km"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="1dp"
                    android:layout_weight="1"
                    android:background="@color/back_loc"
                    android:gravity="center"
                    android:text="@string/TwoKmDistance"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@color/apps_color" />

                <com.ibadat.sdk.views.MyCustomTextView
                    android:id="@+id/ctv_three_km"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/back_loc"
                    android:gravity="center"
                    android:text="@string/ThreeKmDistance"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:textColor="@color/apps_color" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_mosque"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="5dp" />
    </LinearLayout>
</RelativeLayout><!--</layout>-->